k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-demo
  template:
    metadata:
      labels:
        app: api-demo
    spec:
      containers:
        - name: api-demo
          image: bisrat1/api-demo:latest   # your API image
          ports:
            - containerPort: 3001
