k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ci-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ci-demo
  template:
    metadata:
      labels:
        app: ci-demo
    spec:
      containers:
        - name: ci-demo
          image: bisrat1/ci-cd-demo:latest
          ports:
            - containerPort: 3000
