k8s/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  selector:
    app: admin-service
  ports:
    - port: 3002
      targetPort: 3002
