k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-demo-service
spec:
  selector:
    app: api-demo
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
