k8s/ci-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ci-demo-service
spec:
  selector:
    app: ci-demo
  ports:
    - port: 3004
      targetPort: 3004
