k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ci-demo-service
spec:
  type: NodePort
  selector:
    app: ci-demo
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30080
