k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ci-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ci-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ci-demo-service
                port:
                  number: 3000

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-demo-service
                port:
                  number: 3001

          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 3002

          - path: /users
            pathType: Prefix
            backend:
                service:
                  name: users-service
                  port:
                    number: 3003
